# Dataguard

./: .gitignore  README.md  __init__.py  __main__.py  auto_detect.py  cli.py  common_passwords.py  config.py  dg_clean_entry.py  formatter.py  io_utils.py  pyproject.toml  requirements.txt
modules/: __init__.py  contact_extractor.py  csv_converter.py  html_sanitizer.py  log_parser.py  password_checker.py  string_sanitizer.py
schema/: auto_detection.schema.json  batch_summary.schema.json  cli_info.schema.json  common_defs.schema.json  config.schema.json  config_cli_response.schema.json  manifest.json  module_result.schema.json  read_metadata.schema.json
tests/: __init__.py  test_auto_detect.py  test_cli_input_validation.py  test_cli_maybe_write_report.py  test_config.py  test_contact_extractor.py  test_contacts_config.py  test_csv_converter.py  test_dg_clean_entry.py  test_formatter_output.py  test_html_sanitizer.py  test_io_utils.py  test_log_parser.py  test_password_checker.py  test_string_sanitizer.py
